fix: removed body overfolw hidden to allow scrolling on mobile

--- a/output.css
+++ b/output.css
@@ -15224,6 +15224,13 @@ section {
   row-gap: 30px;
 }
 
+summary {
+  -webkit-animation: fadeIn;
+          animation: fadeIn;
+  -webkit-animation-duration: 2s;
+          animation-duration: 2s;
+}
+
 .modalCountryOpen {
   visibility: visible;
   -webkit-animation: fadeIn;
